Add skeleton files for blog topics
Co-authored-by: Dale Emery <demery@vmware.com>

--- a/config.yaml
+++ b/config.yaml
@@ -46,5 +46,5 @@ params:
     description: Dale Emery's Apache Geode Development Blog
     keywords: []
     images: []
-    logo: images/logo.png
+    logo: images/apache-geode-symbol.svg
 
